@@ -79,6 +79,20 @@ spring:
 @MapperScan(basePackages = {"com.gin.springboot3template.sys.dao"})
 ```
 
+## Dockerfile
+
+参考
+
+```dockerfile
+FROM openjdk:18
+VOLUME /tmp
+ADD guangqiv2-0.0.1-SNAPSHOT.war app.war
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+ENV JAVA_OPTS='--add-opens java.base/java.lang=ALL-UNNAMED'
+ENTRYPOINT java ${JAVA_OPTS} -jar /app.war  --spring.profiles.active=prod
+```
+
 ## 权限
 
 ### 提供更多粗粒度权限
